--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_downloader:
+  file_downloader:
     # When depending on this package from a real application you should use:
     #   flutter_downloader: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
@@ -26,9 +26,7 @@ dependencies:
     # the parent directory to use the current plugin's version.
     path: ../
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  logging:
 
 dev_dependencies:
   flutter_test:
