--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -33,7 +33,8 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
-  path_provider:
+  path: ^1.8.2
+  path_provider: ^2.0.11
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
