--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  file_downloader:
+  background_downloader:
     # When depending on this package from a real application you should use:
     #   flutter_downloader: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
