--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: background_downloader
-description: A background file downloader for iOS and Android. Define where to get your file from, where to store it, and how you want to monitor the download, and the background loader will ensure this is done even if your app moves to the background.
-version: 1.1.0
+description: A background file downloader for iOS and Android. Define where to get your file from, where to store it, enqueue your task and monitor it
+version: 1.2.0
 repository: https://github.com/781flyingdutchman/background_downloader
 
 environment:
