Updates to Example app

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,6 +1,8 @@
 name: flutter_downloader_example
 description: Demonstrates how to use the flutter_downloader plugin.
 
+version: 1.0.0+1
+
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
