--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -60,6 +60,7 @@ flutter:
 
   assets:
     - assets/a_file.txt
+    - assets/HNComments.html
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
