--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,14 @@ dependencies:
     sdk: flutter
   logging: ^1.0.2
   http: ^0.13.5
+  path_provider: ^2.0.0
+  path: ^1.0.0
+  async: ^2.10.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-  path_provider: ^2.0.12
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -31,3 +33,5 @@ flutter:
         pluginClass: BackgroundDownloaderPlugin
       ios:
         pluginClass: BackgroundDownloaderPlugin
+#      macos:
+#        dartPluginClass: DesktopDownloader
