--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: background_downloader
-description: A background file downloader for iOS and Android. Define where to get your file from, where to store it, enqueue your task and monitor it
-version: 3.0.0
+description: A background file downloader and uploader for iOS and Android. Define the task, 
+  enqueue and monitor progress
+version: 3.0.1
 repository: https://github.com/781flyingdutchman/background_downloader
 
 environment:
