--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,8 @@ dependencies:
   http: ^0.13.5
   path_provider: ^2.0.0
   path: ^1.0.0
-  async: ^2.10.0
+  async: ^2.1.0
+  mime: ^1.0.0
 
 dev_dependencies:
   flutter_test:
