--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -39,6 +39,7 @@ dev_dependencies:
     sdk: flutter
   path: ^1.8.2
   path_provider: ^2.0.11
+  localstore: ^1.3.4
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
