Fixed bug where resumed task would emit a 0.0 progress

--- a/android/.gitignore
+++ b/android/.gitignore
@@ -7,3 +7,10 @@
 /build
 /captures
 .cxx
+
+# for plugin
+
+gradlew
+gradlew.bat
+gradle/wrapper/gradle-wrapper.properties
+gradle/wrapper/gradle-wrapper.jar
