--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,14 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.0
 
+platforms:
+  android:
+  ios:
+  linux:
+  macos:
+  windows:
+
+
 flutter:
   plugin:
     platforms:
