Upgraded gradle for Android build

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -61,6 +61,7 @@ android {
         }
     }
     buildToolsVersion '33.0.0'
+    namespace 'com.bbflight.background_downloader_example'
 }
 
 flutter {
