--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bbflight.background_downloader_example">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
    <application
         android:label="background_downloader_example"
         android:name="${applicationName}"
