--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,9 +1,7 @@
 <manifest package="com.bbflight.background_downloader"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-
     <application>
-        <receiver android:name="NotificationBroadcastReceiver"/>
+        <receiver android:name="NotificationRcvr"/>
     </application>
 </manifest>
