--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-   <application
+
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
+    <application
         android:label="background_downloader_example"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
