--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,8 @@ dependencies:
   path: ^1.8.1
   async: ^2.6.0
   mime: ^1.0.1
-  localstore: ^1.3.5
+  localstore:
+    path: '../localstore'
   collection: ^1.15.0
 
 dev_dependencies:
