--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ version: 6.1.0
 repository: https://github.com/781flyingdutchman/background_downloader
 
 environment:
-  sdk: '>=2.18.0 <3.0.0'
+  sdk: ^3.0.0
   flutter: ">=2.5.0"
 
 dependencies:
