--- a/android/build.gradle
+++ b/android/build.gradle
@@ -43,6 +43,8 @@ android {
     defaultConfig {
         minSdkVersion 24
     }
+    namespace "com.bbflight.background_downloader"
+
 }
 
 dependencies {
@@ -51,7 +53,7 @@ dependencies {
     implementation "androidx.preference:preference-ktx:1.2.0"
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation "androidx.core:core-ktx:1.10.0"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 repositories {
     mavenCentral()
