--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   logging: ^1.0.2
-  http: ^0.13.0
+  http: '>=0.13.0 <2.0.0'
   path_provider: ^2.0.2
   path: ^1.8.1
   async: ^2.6.0
