V6 experimentation and testing for issue #77

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -35,11 +35,11 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = '1.8'
     }
 
     sourceSets {
-        main.java.srcDirs += "src/main/kotlin"
+        main.java.srcDirs += 'src/main/kotlin'
     }
 
     defaultConfig {
@@ -60,8 +60,8 @@ android {
             signingConfig signingConfigs.debug
         }
     }
-    buildToolsVersion "33.0.0"
-    namespace "com.bbflight.background_downloader_example"
+    buildToolsVersion '34.0.0'
+    namespace 'com.bbflight.background_downloader_example'
 }
 
 flutter {
