--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -40,7 +40,7 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
-#  flutter_downloader: ^1.10.5 # use only for testing
+  flutter_downloader: ^1.10.5 # use only for testing
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
