--- a/android/build.gradle
+++ b/android/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation "androidx.core:core-ktx:1.10.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    testImplementation "junit:junit:4.13.2"
 }
 repositories {
     mavenCentral()
