--- a/android/build.gradle
+++ b/android/build.gradle
@@ -54,7 +54,9 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation "androidx.core:core-ktx:1.10.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.test:monitor:1.6.1'
     testImplementation "junit:junit:4.13.2"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
 }
 repositories {
     mavenCentral()
