--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: background_downloader
 description: A multi-platform background file downloader and uploader. Define the task, enqueue and monitor progress
 
-version: 7.11.0
+version: 7.11.1
 repository: https://github.com/781flyingdutchman/background_downloader
 
 environment:
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   logging: ^1.0.2
-  http: '>=0.13.0 <2.0.0'
+  http: ^1.1.0
   path_provider: ^2.0.2
   path: ^1.8.1
   async: ^2.6.0
