--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,7 +1,7 @@
 
 
 buildscript {
-    ext.kotlin_version = '1.9.20'
+//    ext.kotlin_version = '1.9.20'
     repositories {
         google()
         mavenCentral()
@@ -10,12 +10,13 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
     }
 }
 
-plugins {
-    id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.20'
-}
+//plugins {
+//    id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.20'
+//}
 
 group 'com.bbflight.background_downloader'
 version '1.0-SNAPSHOT'
@@ -29,6 +30,8 @@ allprojects {
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlinx-serialization'
+
 
 
 android {
@@ -60,7 +63,6 @@ dependencies {
     implementation "androidx.preference:preference-ktx:1.2.1"
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation "androidx.core:core-ktx:1.10.0"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.0"
     implementation 'androidx.test:monitor:1.6.1'
     testImplementation "junit:junit:4.13.2"
