--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -61,7 +61,7 @@ android {
         }
     }
     buildToolsVersion '34.0.0'
-    namespace 'com.bbflight.background_downloader_example'
+    if (project.android.hasProperty("namespace")) { namespace 'com.bbflight.background_downloader_example' }
 }
 
 flutter {
