Change build.gradle for background_downloader library to transition from imperative to declarative Flutter Gradle plugins
See https://docs.flutter.dev/release/breaking-changes/flutter-gradle-plugin-apply

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,17 +1,7 @@
-
-
-buildscript {
-    ext.kotlin_version = '1.9.20'
-    repositories {
-        google()
-        mavenCentral()
-    }
-
-    dependencies {
-        classpath 'com.android.tools.build:gradle:8.2.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
-    }
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.22'
 }
 
 group 'com.bbflight.background_downloader'
@@ -23,12 +13,6 @@ allprojects {
         mavenCentral()
     }
 }
-
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlinx-serialization'
-
-
 
 android {
     compileSdk 34
@@ -59,7 +43,7 @@ dependencies {
     implementation "androidx.concurrent:concurrent-futures-ktx:1.1.0"
     implementation "androidx.preference:preference-ktx:1.2.1"
     implementation "androidx.core:core-ktx:1.12.0"
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3"
     implementation 'androidx.test:monitor:1.6.1'
     testImplementation "junit:junit:4.13.2"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.1"
