--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,11 @@ migrate_working_dir/
 .dart_tool/
 .packages
 build/
+
+# FVM Version Cache
+.fvm/
+.fvmrc
+
+# Ruby/Bundler for cocoa pods
+.ruby-version
+Gemfile*
