--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
     # the parent directory to use the current plugin's version.
     path: ../
 
+  # This is used to create a background isolate
+  # with a separate entry point & Flutter engine for testing.
+  flutter_isolate: ^2.1.0
   logging: ^1.0.2
   provider: ^6.0.3
   path_provider: ^2.0.2
