--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,23 +46,6 @@ jobs:
       - run: flutter analyze
         working-directory: example
 
-  test:
-    name: "Run tests"
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        sdk: [ min, stable, beta ]
-    steps:
-      - uses: actions/checkout@v4
-      - uses: subosito/flutter-action@v2
-        with:
-          cache: true
-          flutter-version: ${{ matrix.sdk == 'min' && env.FLUTTER_MIN_SDK || '' }}
-          channel: ${{ matrix.sdk == 'min' && 'stable' || matrix.sdk }}
-      - run: flutter pub get
-      - run: flutter test
-
   build-android:
     name: "Build Android example"
     runs-on: ubuntu-latest
@@ -109,7 +92,7 @@ jobs:
           channel: ${{ matrix.sdk == 'min' && 'stable' || matrix.sdk }}
       - uses: maxim-lobanov/setup-cocoapods@v1
         with:
-          podfile-path: example/ios/Podfile.lock
+          version: latest
       - name: Build example iOS package
         run: flutter build ios --simulator
         working-directory: example
@@ -119,3 +102,28 @@ jobs:
         with:
           name: background-downloader-demo.app
           path: example/build/ios/iphonesimulator
+
+  build-linux:
+    name: "Build Linux example"
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        sdk: [ stable, beta ]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: subosito/flutter-action@v2
+        with:
+          cache: true
+          flutter-version: ${{ matrix.sdk == 'min' && env.FLUTTER_MIN_SDK || '' }}
+          channel: ${{ matrix.sdk == 'min' && 'stable' || matrix.sdk }}
+      - run: flutter config --enable-linux-desktop
+      - name: Build example Linux package
+        run: flutter build linux
+        working-directory: example
+      - name: Upload example Linux package as artifact
+        if: ${{ matrix.sdk == 'stable' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: background-downloader-demo-linux
+          path: example/build/linux/x64/release/bundle
