--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
         working-directory: example
 
   build-android:
-    name: "Build Android example"
+    name: "Build Android"
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -77,7 +77,7 @@ jobs:
           path: example/build/app/outputs/flutter-apk/app-release.apk
 
   build-ios:
-    name: "Build iOS example"
+    name: "Build iOS"
     runs-on: macos-latest
     strategy:
       fail-fast: false
@@ -104,7 +104,7 @@ jobs:
           path: example/build/ios/iphonesimulator
 
   build-linux:
-    name: "Build Linux example"
+    name: "Build Linux"
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -117,7 +117,12 @@ jobs:
           cache: true
           flutter-version: ${{ matrix.sdk == 'min' && env.FLUTTER_MIN_SDK || '' }}
           channel: ${{ matrix.sdk == 'min' && 'stable' || matrix.sdk }}
-      - run: flutter config --enable-linux-desktop
+      - name: Setup Linux build environment
+        run: |
+          flutter config --enable-linux-desktop
+          sudo apt-get install -y ninja-build
+          sudo apt-get install -y libgtk-3-dev
+          export CMAKE_CXX_COMPILER=$(which g++)
       - name: Build example Linux package
         run: flutter build linux
         working-directory: example
