--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,8 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  # This is Dart 3.0.x
-  FLUTTER_MIN_SDK: '3.10.6'
+  # This is Dart 3.2.x
+  FLUTTER_MIN_SDK: '3.16.0'
 
 jobs:
   format:
@@ -53,7 +53,7 @@ jobs:
       fail-fast: false
       matrix:
         # The example Android project setup ist not supported by Flutter 3.10.x
-        sdk: [ stable, beta ]
+        sdk: [ min, stable, beta ]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
