--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: background_downloader
 description: A multi-platform background file downloader and uploader. Define the task, enqueue and monitor progress
 
-version: 8.9.1
+version: 8.9.2
 repository: https://github.com/781flyingdutchman/background_downloader
 
 environment:
-  sdk: ^3.3.0
-  flutter:  '>=3.0.0'
+  sdk: ^3.5.0
+  flutter:  '>=3.24.0'
 
 dependencies:
   flutter:
@@ -22,7 +22,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: '>4.0.0 <6.0.0'
   mockito: ^5.0.17
   build_runner: ^2.4.13
 
