--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -8,7 +8,8 @@ version: 2.0.0
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: ^3.0.0
+  sdk: ^3.5.0
+  flutter:  '>=3.24.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
