--- a/android/build.gradle
+++ b/android/build.gradle
@@ -31,6 +31,7 @@ android {
 
     defaultConfig {
         minSdkVersion 21
+        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
     }
     if (project.android.hasProperty("namespace")) { namespace 'com.bbflight.background_downloader' }
 
@@ -43,9 +44,12 @@ dependencies {
     implementation "androidx.preference:preference-ktx:1.2.1"
     implementation "androidx.core:core-ktx:1.12.0"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3"
-    implementation 'androidx.test:monitor:1.6.1'
+    implementation 'androidx.test:monitor:1.7.2'
     testImplementation "junit:junit:4.13.2"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.1"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3"
+    androidTestImplementation "androidx.test.ext:junit:1.2.1"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.6.1"
+
 }
 repositories {
     mavenCentral()
