Add 'funding' entry to pubspec.yaml and update linter

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: '>4.0.0 <6.0.0'
+  flutter_lints: '>4.0.0 <7.0.0'
   mockito: ^5.0.17
   build_runner: ^2.4.13
 
@@ -42,3 +42,6 @@ flutter:
         pluginClass: BDPlugin
       ios:
         pluginClass: BackgroundDownloaderPlugin
+
+funding:
+  - https://github.com/sponsors/781flyingdutchman
