--- a/example/ios/Runner/Info-Debug.plist
+++ b/example/ios/Runner/Info-Debug.plist
@@ -32,6 +32,8 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>thinkbroadband.com</key>
