--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,1 +1,13 @@
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+    plugins {
+        id 'com.android.library' version '8.13.2'
+        id 'org.jetbrains.kotlin.android' version '1.9.22'
+    }
+}
+
 rootProject.name = 'background_downloader'
