--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -26,5 +26,11 @@
                 android:resource="@xml/bgd_file_paths" />
         </provider>
 
+        <service
+            android:name=".UIDTJobService"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:exported="true"
+            android:foregroundServiceType="dataSync" />
+
     </application>
 </manifest>
