--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -42,7 +42,7 @@ android {
         applicationId "com.bbflight.background_downloader_example"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion 23
+        minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
